# flowr

./: .gitignore  AGENTS.md  CHANGELOG.md  FLOW.md  README.md  WORK.md  pyproject.toml  template-config.yaml
.github/workflows/: ci.yml  dependency-review.yml  pypi-publish.yml  tag-release.yml
adr/: ADR_20260422_cli_parser_library.md  ADR_20260422_version_source.md  ADR_20260426_evidence_type_system.md  ADR_20260426_image_rendering_deferral.md  ADR_20260426_subflow_resolution.md  ADR_20260426_validation_result.md
api/: flowr.html  index.html  search.js
api/flowr/: cli.html  domain.html  exporters.html  infrastructure.html
branding/: branding.md
coverage/: class_index.html  function_index.html  index.html  status.json  z_066038f1677320e0___init___py.html  z_066038f1677320e0_config_py.html  z_066038f1677320e0_session_store_py.html  z_4c121f2fe6c477a6___init___py.html  z_4c121f2fe6c477a6_json_exporter_py.html  z_4c121f2fe6c477a6_mermaid_exporter_py.html  z_4c121f2fe6c477a6_registry_py.html  z_50317e6593a8ef1f___init___py.html  z_50317e6593a8ef1f_output_py.html  z_50317e6593a8ef1f_resolution_py.html  z_50317e6593a8ef1f_session_cmd_py.html  z_85812e130abc7c14___init___py.html  z_85812e130abc7c14___main___py.html  z_a8ffc8b04675afbf___init___py.html  z_a8ffc8b04675afbf_condition_py.html  z_a8ffc8b04675afbf_export_py.html  z_a8ffc8b04675afbf_flow_definition_py.html  z_a8ffc8b04675afbf_loader_py.html  z_a8ffc8b04675afbf_mermaid_py.html  z_a8ffc8b04675afbf_session_py.html  z_a8ffc8b04675afbf_validation_py.html
docs/: branding.md  discovery.md  glossary.md  index.html  product-definition.md  scope_journal.md  system.md
docs/adr/: ADR-2026-04-22-version-source.md  ADR-2026-04-26-cli-io-convention.md  ADR-2026-04-26-condition-inlining.md  ADR-2026-04-26-evidence-type-system.md  ADR-2026-04-26-fuzzy-match-algorithm.md  ADR-2026-04-26-image-rendering-deferral.md  ADR-2026-04-26-subflow-resolution.md  ADR-2026-04-26-validation-result.md  ADR_20260426_cli_io_convention.md  ADR_20260426_condition_inlining.md  ADR_20260426_fuzzy_match_algorithm.md  ADR_20260426_subflow_resolution.md
docs/branding/: branding.md
docs/features/: export-core.feature  export-robustness.feature  export-viz-output.feature  export-viz-pipeline.feature  export.feature
docs/interview-notes/: IN_20260426_condition_groups.md  IN_20260426_configurable_paths.md  IN_20260426_spec_design.md  IN_20260501_cli-flow-name-resolution.md  IN_20260506_export-feature.md  IN_20260506_remove-fuzzy-match.md  IN_20260507_export-robustness.md
features/: export-json.feature  export-mermaid.feature
flowr/: __init__.py  __main__.py
interview-notes/: IN_20260422_cli_parser.md  IN_20260422_initial_discovery.md  IN_20260426_cli_design.md  IN_20260426_spec_design.md  IN_20260501_session-management.md  IN_20260502_config-paths-gap.md  IN_20260505_subflow-transition-overhaul.md
post-mortem/: PM_20260501_session-not-updated.md  PM_20260501_skipping-docs-before-planning.md  PM_20260502_feature-decomposition-overlap.md  PM_20260502_partial-delivery-without-approval.md  PM_20260502_review-gate-bypassed.md  PM_20260505_subflow-mechanism-non-functional.md  PM_20260506_non-hex-feature-ids.md
research/: README.md
scripts/: assign_ids.py  check_knowledge.py  check_oc.py  check_version.py  detect_state.py  update_index_html.py
spec/: context_map.md  event_storming.md  flow_definition_spec.md  glossary.md
tests/: report.html
(+131 files in other folders)
